# OctoSense

./: .gitignore  LICENSE  README.md  download_octosense.py  environment.yml  octosense_quickstart.ipynb  requirements.txt
OctoSense/: Dockerfile  README.md  entrypoint.zsh  run.sh
OctoSense/CAD/: 80-20 Camera Bar.SLDPRT  91290A228_Black-Oxide Alloy Steel Socket Head Screw.SLDPRT  93115K871_Load-Rated Threaded Bumper.SLDPRT  93655A225_Male-Female Threaded Hex Standoff.SLDPRT  Back Camera Case.SLDPRT  Back Sensor Suite Plate.SLDPRT  Battery Case.SLDPRT  Buck Converter Plate.SLDPRT  Cage Connector Plate V2.SLDPRT  Cage Mount V2.SLDPRT  Cage Ring V2.SLDPRT  Camera Base.SLDPRT  Camera Case.SLDASM  Camera Front Case Plate.SLDPRT  Camera Stack.SLDASM  Car Mount.SLDPRT  Components Plate.SLDPRT  Event Camera Case.SLDASM  Front and Back Sensor Suite Plate.SLDPRT  IMU Plate.SLDPRT  IR Filter Clamp.SLDPRT  Left Side Sensor Tower Plate.SLDPRT  Metric 80-20.SLDPRT  Mock Antenna.SLDPRT  (+25 more)
OctoSense/data_collect/: package.xml  setup.cfg  setup.py
OctoSense/data_collect/config/: FlirParams  blackfly_s.yaml  flir_ax5.yaml  odom.yaml  ouster.yaml  sensors_config.yaml  vectornav.yaml  vn_sensormsgs.yaml  zed_f9p.yaml
OctoSense/data_collect/data_collect/: __init__.py  collection_controller.py  log_aggregator.py  main.py  recorder_config.py  shutdown_on_bag_complete.py  web_server.py
OctoSense/data_collect/data_collect/static/: app.js  index.html  styles.css
OctoSense/data_collect/launch/: ntrip_client.launch.py  odom.launch.py  system.launch.py
data_processing/: README.md
(+47 files in other folders)
